--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/mdx": "^11.1.2",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.1",
+    "remark-html": "^15.0.0",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
+    "autoprefixer": "^10.3.7",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11",
     "typescript": "4.4.4"
   }
 }
