--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@next/mdx": "^11.1.2",
@@ -23,6 +24,7 @@
     "@types/react": "17.0.31",
     "autoprefixer": "^10.3.7",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-transform-define": "^2.0.1",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.11",
