--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "next lint && next build",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "start": "next start"
   },
   "dependencies": {
     "@next/mdx": "^11.1.2",
@@ -25,8 +25,8 @@
     "autoprefixer": "^10.3.7",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-transform-define": "^2.0.1",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
+    "eslint": "^8.0.1",
+    "eslint-config-next": "^11.1.2",
     "postcss": "^8.3.11",
     "typescript": "4.4.4"
   }
