--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js", "next-seo-config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js", "next-seo-config.ts"],
   "exclude": ["node_modules"]
 }
