--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark-prism": "^1.3.6"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.7",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
