resolves editor warnings for eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
+  "overrides": [ { "files": ["*.ts", "*.tsx"] } ],
   "parserOptions": {
     "ecmaFeatures": {
       "impliedStrict": true,
