--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js", "next-seo-config.ts", "jest.config.js"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js", "next-seo-config.ts", "jest.config.js", "jest.setup.js", ".babelrc.js"],
+  "exclude": ["node_modules", ".next", "out"],
 }
