--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "remark-prism": "^1.3.6"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/gtag.js": "^0.0.7",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.31",
@@ -35,9 +41,11 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^11.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "jest-watch-typeahead": "^1.0.0",
     "postcss": "^8.3.11",
+    "react-test-renderer": "^17.0.2",
     "typescript": "4.4.4"
   }
 }
